unpackaged/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <description>This object stores the Callout transactions, DML errors and Exceptions occurred in the applications.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T-{000000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>