unpackaged/main/default/objects/Transaction__c/fields/BodyBlob__c.field-meta.xml
<CustomField>
    <fullName>BodyBlob__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the request body was a blob.</description>
    <inlineHelpText>This field indicates if the request body was a blob.</inlineHelpText>
    <label>Body Blob</label>
    <type>Checkbox</type>
</CustomField>