unpackaged/main/default/objects/Transaction__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is used to correlate logs stored in SFDC with External systems.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field is used to correlate logs stored in SFDC with External systems.</inlineHelpText>
    <label>Correlation Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>