unpackaged/main/default/objects/Transaction__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint related to the Callout request.</description>
    <inlineHelpText>Endpoint related to the Callout request.</inlineHelpText>
    <label>Endpoint</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>