unpackaged/main/default/objects/Transaction__c/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <description>Serialized headers.</description>
    <inlineHelpText>Serialized headers.</inlineHelpText>
    <label>Headers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>