unpackaged/main/default/objects/Transaction__c/fields/IsEncrypted__c.field-meta.xml
<CustomField>
    <fullName>IsEncrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the record is encrypted or not.</description>
    <inlineHelpText>This field indicates if the record is encrypted or not.</inlineHelpText>
    <label>Is Encrypted</label>
    <type>Checkbox</type>
</CustomField>