unpackaged/main/default/objects/Transaction__c/fields/RelatedTransaction__c.field-meta.xml
<CustomField>
    <fullName>RelatedTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains a Parent transaction that originated the current one.</description>
    <inlineHelpText>This field contains a Parent transaction that originated the current one.</inlineHelpText>
    <label>Related Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Exceptions</relationshipLabel>
    <relationshipName>RelatedTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>