unpackaged/main/default/objects/Transaction__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Request payload.</description>
    <inlineHelpText>Request payload.</inlineHelpText>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>