unpackaged/main/default/objects/Transaction__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Response payload.</description>
    <inlineHelpText>Response payload.</inlineHelpText>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>