unpackaged/main/default/objects/Transaction__c/fields/ResponseBodyBlob__c.field-meta.xml
<CustomField>
    <fullName>ResponseBodyBlob__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the response body was a blob.</description>
    <inlineHelpText>This field indicates if the response body was a blob.</inlineHelpText>
    <label>Response Body Blob</label>
    <type>Checkbox</type>
</CustomField>