unpackaged/main/default/objects/Transaction__c/fields/ResponseCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseCode__c</fullName>
    <description>Response code of the transaction.</description>
    <inlineHelpText>Response code of the transaction.</inlineHelpText>
    <label>Response Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>