unpackaged/main/default/objects/Transaction__c/fields/ResponseHeaders__c.field-meta.xml
<CustomField>
    <fullName>ResponseHeaders__c</fullName>
    <description>Response HTTP Headers.</description>
    <inlineHelpText>Response HTTP Headers.</inlineHelpText>
    <label>Response Headers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>