unpackaged/main/default/objects/Transaction__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>Stack Trace related to the exception.</description>
    <inlineHelpText>Stack Trace related to the exception.</inlineHelpText>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>