unpackaged/main/default/objects/Transaction__c/recordTypes/Callout.recordType-meta.xml
<RecordType>
    <fullName>Callout</fullName>
    <active>true</active>
    <description>Callout record type.</description>
    <label>Callout</label>
</RecordType>