unpackaged/main/default/objects/Transaction__c/recordTypes/Exception.recordType-meta.xml
<RecordType>
    <fullName>Exception</fullName>
    <active>true</active>
    <description>Exception record type.</description>
    <label>Exception</label>
</RecordType>